syntax = "proto3";
import "google/protobuf/timestamp.proto";

option go_package = ".;authen_and_post";
package authen_and_post;

service AuthenticateAndPost {
  rpc CheckUserAuthentication(CheckUserAuthenticationRequest) returns (CheckUserAuthenticationResponse) {}
  rpc CreateUser(UserDetailInfo) returns (UserResult) {}
  rpc EditUser(EditUserRequest) returns (EditUserResponse) {}

  rpc GetUserFollower(UserInfo) returns (UserFollower) {}
  rpc GetPostDetail(GetPostRequest) returns (Post) {}

  rpc FollowUser(FollowUserRequest) returns (FollowUserResponse) {}
  rpc UnfollowUser(UnfollowUserRequest) returns (UnfollowUserResponse) {}
  rpc GetFollowerList(GetFollowerListRequest) returns (GetFollowerListResponse) {}
  //TODO: create more api
}

message FollowUserRequest {
  int64 user_id = 1;
  int64 following_id = 2;
}

message FollowUserResponse {
  enum FollowStatus {
    OK = 0;
    NOT_FOUND = 1;
    ALREADY_FOLLOWED = 2;
  }
  FollowStatus status = 1;
}

message UnfollowUserRequest {
  int64 user_id = 1;
  int64 following_id = 2;
}

message UnfollowUserResponse {
  enum UnfollowStatus {
    OK = 0;
    NOT_FOUND = 1;
    NOT_FOLLOWED = 2;
  }
  UnfollowStatus status = 1;
}

message GetFollowerListRequest {
  int64 user_id = 1;
}

message GetFollowerListResponse {
  enum GetFollowerListStatus {
    OK = 0;
    NOT_FOUND = 1;
  }
  GetFollowerListStatus status = 1;
  message FollowerInfo {
    int64 user_id = 1;
    string user_name = 2;
  }
  repeated FollowerInfo followers = 2;
}

message UserInfo {
  int64 user_id = 1;
  string user_name = 2;
  string user_password = 3;
}

message UserDetailInfo {
  int64 user_id = 1;
  string user_name = 2;
  string user_password = 3;
  string first_name = 4;
  string last_name = 5;
  google.protobuf.Timestamp dob = 6;
  string email = 7;
}

message EditUserRequest {
  int64 user_id = 1;
  optional string user_password = 3;
  optional string first_name = 4;
  optional string last_name = 5;
  optional google.protobuf.Timestamp dob = 6;
}

message EditUserResponse {
  int64 user_id = 1;
}

message CheckUserAuthenticationRequest {
  string user_name = 1;
  string user_password = 2;
}

message CheckUserAuthenticationResponse {
  enum AuthenticationStatus {
    OK = 0;
    NOT_FOUND = 1;
    WRONG_PASSWORD = 2;
  }
  AuthenticationStatus status = 1;
  int64 user_id = 2;
}

enum UserStatus{
  OK = 0;
  NOT_FOUND = 1;
}

message UserResult {
  UserStatus status = 1;
  UserDetailInfo info = 2;
}

message UserFollower {
  repeated UserInfo followers = 1;
}

message GetPostRequest {
  int64 post_id = 1;
}

message Post {
  int64 post_id = 1;
  int64 user_id = 2;
  string content_text = 3;
  string content_image_path = 4;
  bool visible = 5;
  int64 created_at = 6;
}